src/objects/AMS_Agency_A_Change_code_History__c.object
<CustomObject>
    <description>In case of change codes related to Changes, this object stores the new and old values of the changed fields.</description>
    <fields>
        <fullName>Agency_Applied_Change_Code__c</fullName>
        <description>Related Agency Applied Change Code</description>
        <label>Agency Applied Change Code</label>
        <referenceTo>Agency_Applied_Change_code__c</referenceTo>
        <relationshipLabel>AMS Agency A Change codes History</relationshipLabel>
        <relationshipName>Agency_A_Change_codes_History_c</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <description>API name of the filed</description>
        <label>Field API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Lookup_New_Value__c</fullName>
        <description>Stores the new value (ID) of the field if this is a lookup field</description>
        <label>Field_Lookup_New_Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Lookup_Old_Value__c</fullName>
        <description>Stores the old value (ID) of the field if this is a lookup field</description>
        <label>Field Lookup Old Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_New_Value__c</fullName>
        <description>Stores the new value of the field. If this is a lookup field, then stores the name of the related record</description>
        <label>Field New Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Old_Value__c</fullName>
        <description>Stores the old value of the field. If this is a lookup field, then stores the name of the related record</description>
        <label>Field Old Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>API name of the object</description>
        <label>Object API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AMS Agency A Change code History</label>
    <nameField>
        <displayFormat>AAC-{000000000}</displayFormat>
        <label>AMS Agency A Change code History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMS Agency A Change codes History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>